k8s/autorena-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autorena-front
  namespace: autorena
spec:
  selector:
    app: autorena-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
